Changes made to cope with incominging empty or undefined data to save them in database as null
