# src/dto/auth/LoginRequest.dto.ts
@@ -2,8 +2,8 @@ import { Example } from "tsoa";
 
 export class LoginRequest {
   @Example("hero@gmail.com")
-  emailName!: string;
+  email!: string;
 
   @Example("lafsU*sdf9dl")
-  emailPassword!: string;
+  password!: string;
 }
